Implement review comments.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,6 +20,7 @@ authors:
   - "Tiago Ribeiro"
   - "Michael Reuter"
   - "Dave Mills"
+  - "Russell Owen"
 
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
